Version 1.64 - 12 June 2007, by Pascal "Pixel" Rigaux

- hack on $pkg->is_arch_compat to make it return true for noarch packages
  when using rpm 4.4.8 (#31314)

Version 1.63 - 9 May 2007, by Pascal "Pixel" Rigaux

- add $trans->Element_fullname

Version 1.62 - 3 May 2007, by Pascal "Pixel" Rigaux

- pass the virtual package name as a parameter to {callback_choices} in
  ->resolve_requested
- add $trans->NElements and $trans->Element_name
  to be able to display name of uninstalled package in callback_uninst
- fix b--obsoletes-->a and c--conflicts-->a prompting for upgrading a
  (need a fix in urpmi which rely on the $state->{rejected} 
   to upgrade (-U) b instead of installing (-i) it)

Version 1.60 - 8 March 2007, by Pascal "Pixel" Rigaux

- more debugging hooks
- create $urpm->packages_providing($name) and use it
- create $urpm->packages_by_name($name)

Version 1.59 - 1 March 2007, by Olivier Thauvin

- rpm 4.4.8 adaptions
- load rpm config files at module load, improve the mechanism

Version 1.58 - 14 February 2007, by Pascal "Pixel" Rigaux

- don't check signature and digest in ->traverse and ->traverse_tag
  (=> x15 speedup, ie 2.5 speedup on urpmi --auto-select and rpmdrake)

Version 1.57 - 9 February 2007, by Pascal "Pixel" Rigaux

- allow upgrading from noarch to x86_64 even if strict-arch

Version 1.56 - 19 January 2007, by Pascal "Pixel" Rigaux

- tell perl that strings from rpm headers are utf8
- add URPM::bind_rpm_textdomain_codeset() to set encoding of messages returned
  by rpmlib, and tell perl that those strings are utf8
- really use strict-arch by default on x86_64

Version 1.55 - 10 January 2007, by Pascal "Pixel" Rigaux

- bug fix release
- fix "not selecting foo-1 since the more recent foo-1 is installed" causing
  urpmi to try to remove the package it wants to install (#28076)

Version 1.54 - 9 January 2007, by Pascal "Pixel" Rigaux

- if we have a choice between foo-1 and bar-1 and foo-2 is installed,
  prefering bar-1 instead of foo-1